Bug 260269 - calendar configure: changing default reminder time does't have an effect on the reminder of a new event.
Summary: calendar configure: changing default reminder time does't have an effect on t...
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 12:55 UTC by Ludwig Reiter
Modified: 2011-01-13 15:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-12-16 12:55:51 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

version:  2010-12-15 svn-1206816

Reproducible: Always

Steps to Reproduce:
1. Configure Calendar: Set default reminder time to 5 mins
2. Open a new event.
3. Look at the reminder flap.


Actual Results:  
=> reminder time is 15 mins.

Expected Results:  
It should be 5 mins in this case.
Comment 1 Tobias Koenig 2010-12-21 13:11:22 UTC
SVN commit 1208378 by tokoe:

Preselect the right reminder time in combo box.

BUG: 260269


 M  +1 -1      alarmpresets.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208378
Comment 2 Ludwig Reiter 2011-01-13 15:41:08 UTC
version 2011-01-12 git-b984b66
The default reminder time can now be configured.