Preselect the right reminder time in combo box.

BUG: 260269

svn path=/trunk/KDE/kdepim/incidenceeditor-ng/; revision=1208378